kubernetes/prod/us-west-2/sso-dashboard-prod/sso-dashboard-prod.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/revision-history-limit: "1"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: sso-dashboard
  namespace: sso-dashboard-prod
spec:
  rules:
  - host: sso.mozilla.com
    http:
      paths:
      - backend:
          service:
            name: sso-dashboard
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sso.mozilla.com
    secretName: sso-dashboard-secret
